--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -312,6 +312,54 @@ body{
     .btn-agregar:hover {
         background-color: #138496;
     }
+
+    /* Estilo del contenedor del formulario */
+.form-filtros {
+   
+    margin: 0;
+    margin-bottom: 20px;
+    display: flex;
+    flex-wrap:nowrap;
+    gap: 10px;
+    align-items: flex-start;
+    justify-content: flex-start;
+    min-width: 600px;
+}
+
+/* Select y input con estilo consistente */
+.filtro-select,
+.filtro-input {
+    padding: 7px 15px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    min-width: 150px;
+    font-size: 14px;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+    transition: border-color 0.3s ease;
+    flex-shrink: 0;
+}
+
+.filtro-input {
+    min-width: 200px;
+}
+
+.filtro-select:focus,
+.filtro-input:focus {
+    border-color: #17a2b8;
+    outline: none;
+}
+
+/* Botón filtrar con estilo igual a los otros botones */
+.btn-filtrar {
+    padding: 7px 20px;
+    border-radius: 5px;
+    background-color: #ffc107; /* Amarillo */
+    color: #fff;
+}
+
+.btn-filtrar:hover {
+    background-color: #e0a800;
+}
  /* Estilos para la paginación */
 .pagination {
     display: flex;
